--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
+
 
 # testing
 /coverage
@@ -12,7 +9,9 @@
 /build
 
 # misc
+.storybook
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
