--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^16.11.47",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
+        "@types/react-router-dom": "^5.3.3",
         "axios": "^0.27.2",
         "mobx": "^6.6.1",
         "mobx-react": "^7.5.2",
