--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.10.0",
+        "@emotion/styled": "^11.10.0",
+        "@fontsource/roboto": "^4.5.7",
+        "@mui/icons-material": "^5.8.4",
+        "@mui/material": "^5.9.3",
+        "@mui/styled-engine-sc": "^5.9.3",
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
@@ -14,15 +20,19 @@
         "axios": "^0.27.2",
         "mobx": "^6.6.1",
         "mobx-react": "^7.5.2",
+        "module-alias": "^2.2.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "styled-components": "^5.3.5",
+        "tspath": "^1.3.7",
         "typescript": "^4.7.4",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
+        "start": "craco start",
+        "build": "react-scripts build ",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "lint": "eslint .",
@@ -43,50 +53,28 @@
         ]
     },
     "devDependencies": {
-        "@storybook/addon-actions": "^6.5.9",
-        "@storybook/addon-essentials": "^6.5.9",
-        "@storybook/addon-interactions": "^6.5.9",
-        "@storybook/addon-links": "^6.5.9",
-        "@storybook/builder-webpack5": "^6.5.9",
-        "@storybook/manager-webpack5": "^6.5.9",
-        "@storybook/node-logger": "^6.5.9",
+        "@craco/craco": "6.4.5",
+        "@storybook/addon-actions": "^6.5.10",
+        "@storybook/addon-essentials": "^6.5.10",
+        "@storybook/addon-interactions": "^6.5.10",
+        "@storybook/addon-links": "^6.5.10",
+        "@storybook/builder-webpack5": "^6.5.10",
+        "@storybook/manager-webpack5": "^6.5.10",
+        "@storybook/node-logger": "^6.5.10",
         "@storybook/preset-create-react-app": "^4.1.2",
-        "@storybook/react": "^6.5.9",
+        "@storybook/react": "^6.5.10",
         "@storybook/testing-library": "0.0.13",
+        "@types/styled-components": "^5.1.25",
         "babel-plugin-named-exports-order": "0.0.2",
+        "craco-alias": "^3.0.1",
         "eslint": "^8.21.0",
         "eslint-plugin-storybook": "^0.6.1",
         "prettier-plugin-organize-imports": "^3.0.0",
         "prop-types": "^15.8.1",
         "sass": "^1.54.0",
+        "ts-loader": "^9.3.1",
+        "tsconfig-paths": "^4.1.0",
+        "tsconfig-paths-webpack-plugin": "^4.0.0",
         "webpack": "^5.74.0"
-    },
-    "eslintConfig": {
-        "overrides": [
-            {
-                "files": [
-                    "**/*.stories.*"
-                ],
-                "rules": {
-                    "import/no-anonymous-default-export": "off"
-                }
-            },
-            {
-                "files": [
-                    "**/*.stories.*"
-                ],
-                "rules": {
-                    "import/no-anonymous-default-export": "off"
-                }
-            },
-            {
-                "files": [
-                    "**/*.stories.*"
-                ],
-                "rules": {
-                    "import/no-anonymous-default-export": "off"
-                }
-            }
-        ]
     }
 }
