--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.5.2",
         "@types/node": "^16.11.47",
         "@types/react": "^18.0.15",
         "@types/react-dom": "^18.0.6",
@@ -27,14 +26,14 @@
         "react-scripts": "5.0.1",
         "styled-components": "^5.3.5",
         "tspath": "^1.3.7",
-        "typescript": "^4.7.4",
+        "validator.ts": "^0.2.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
         "start": "craco start",
-        "build": "react-scripts build ",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "build": "craco build ",
+        "test": "craco test",
+        "eject": "craco  eject",
         "lint": "eslint .",
         "lint-fix": "eslint . --fix",
         "storybook": "start-storybook -p 6006 -s public",
@@ -64,17 +63,22 @@
         "@storybook/preset-create-react-app": "^4.1.2",
         "@storybook/react": "^6.5.10",
         "@storybook/testing-library": "0.0.13",
+        "@types/jest": "^27.5.2",
         "@types/styled-components": "^5.1.25",
         "babel-plugin-named-exports-order": "0.0.2",
         "craco-alias": "^3.0.1",
         "eslint": "^8.21.0",
-        "eslint-plugin-storybook": "^0.6.1",
+        "eslint-plugin-storybook": "^0.6.3",
+        "jest": "^28.1.3",
+        "jest-watch-typeahead": "^0.6.5",
         "prettier-plugin-organize-imports": "^3.0.0",
         "prop-types": "^15.8.1",
         "sass": "^1.54.0",
+        "ts-jest": "^28.0.7",
         "ts-loader": "^9.3.1",
         "tsconfig-paths": "^4.1.0",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
+        "typescript": "^4.7.4",
         "webpack": "^5.74.0"
     }
 }
