--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
         "jsx": "react-jsx"
     },
 
-    "include": ["src"],
+    "include": ["src", "index.d.ts"],
     "exclude": ["node_modules", "**/*.story*"]
 }
