--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://AlnKrvchnk.github.io/UTouch-Project-Rental",
     "name": "my-app",
     "version": "0.1.0",
     "private": true,
@@ -17,6 +18,7 @@
         "@types/react-dom": "^18.0.6",
         "@types/react-router-dom": "^5.3.3",
         "axios": "^0.27.2",
+        "gh-pages": "^4.0.0",
         "mobx": "^6.6.1",
         "mobx-react": "^7.5.2",
         "module-alias": "^2.2.2",
@@ -36,7 +38,9 @@
         "lint": "eslint .",
         "lint-fix": "eslint . --fix",
         "storybook": "start-storybook -p 6006 -s public",
-        "build-storybook": "build-storybook -s public"
+        "build-storybook": "build-storybook -s public",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "browserslist": {
         "production": [
@@ -52,6 +56,7 @@
     },
     "devDependencies": {
         "@craco/craco": "6.4.5",
+        "@mui/styles": "^5.9.3",
         "@storybook/addon-actions": "^6.5.10",
         "@storybook/addon-essentials": "^6.5.10",
         "@storybook/addon-interactions": "^6.5.10",
