--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
+        "react-yandex-maps": "^4.6.0",
         "styled-components": "^5.3.5",
         "tspath": "^1.3.7",
+        "use-debounce": "^8.0.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
