--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
         "@storybook/react": "^6.5.10",
         "@storybook/testing-library": "0.0.13",
         "@types/jest": "^27.5.2",
+        "@types/react-swipeable-views": "^0.13.1",
+        "@types/react-swipeable-views-utils": "^0.13.3",
         "@types/styled-components": "^5.1.25",
         "babel-plugin-named-exports-order": "0.0.2",
         "craco-alias": "^3.0.1",
@@ -79,6 +81,8 @@
         "jest-watch-typeahead": "^0.6.5",
         "prettier-plugin-organize-imports": "^3.0.0",
         "prop-types": "^15.8.1",
+        "react-swipeable-views": "^0.14.0",
+        "react-swipeable-views-utils": "^0.14.0",
         "sass": "^1.54.0",
         "ts-jest": "^28.0.7",
         "ts-loader": "^9.3.1",
