--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-
+    "outDir": "./build/",
     "include": ["src", "index.d.ts"],
     "exclude": ["node_modules", "**/*.story*"]
 }
